--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <footer>
             <div class="header clearfix">
               <p class="float-right"><a href="#">Back to top</a></p>
-              <p>© 2017 Whale Tank Contribuors | CC-BY-4.0</p>
+              <p>© 2017 Whale Tank Contributors | CC-BY-4.0</p>
             </div>
           </footer>
         </div>
