--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>These represent verbal commitments only, so far! No formal relationship or sponsorship is claimed.</p>
             <div class="row">
               <div class="col-lg-4" style="text-align: center;">
-                <img class="rounded-circle" src="https://d1qb2nb5cznatu.cloudfront.net/users/787012-large?1412186249" alt="Ira Miller" width="160" height="160"/>
+                <img class="rounded-circle" src="https://iramiller.com/images/profile.png" alt="Ira Miller" width="160" height="160"/>
                 <h5 id="iramiller">Ira Miller</h5>
               </div>
               <div class="col-lg-4" style="text-align: center;">
