ico whales rebrand

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Whale Tank - Pitching ICOs to Giants of the Crypto Ocean</title>
+    <title>ICO Whales - Pitching ICOs to Giants of the Crypto Ocean</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0-alpha.6/cerulean/bootstrap.min.css">
   </head>
@@ -14,11 +14,11 @@
         <div class="row">
           <div class="container">
            <div class="header clearfix">
-             <h1 style="text-align: center;">Whale Tank</h1>
+             <h1 style="text-align: center;">ICO Whales</h1>
            </div>
           <div class="jumbotron" style="text-align: center;">
             <div class="container">
-              <img src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/19895092_10155400392677660_1252980598480399489_n.jpg?oh=9fa51e7b616380d201577368a8cd260a&amp;oe=59FBBE44" alt="Whale Tank Meme" />
+              <img src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/19895092_10155400392677660_1252980598480399489_n.jpg?oh=9fa51e7b616380d201577368a8cd260a&amp;oe=59FBBE44" alt="ICO Whales Meme" />
             </div>
           </div>
           <div class="container">
@@ -40,7 +40,7 @@
 
                 <p>Advertising is pretty straightforward; run ads on the website, youtube, and other hosting providers. This may become significant, but is likely to start out as the smaller stream.</p>
 
-                <p>Equity is the most significant and interesting revenue stream for Whale Tank. Each project that goes on the show should be required to commit some equity to the Whale Tank fund. There could be performance triggers, as well, for instance, an extra bonus if they meet a fundraising goal during the broadcast.</p>
+                <p>Equity is the most significant and interesting revenue stream for ICO Whales. Each project that goes on the show should be required to commit some equity to the ICO Whales fund. There could be performance triggers, as well, for instance, an extra bonus if they meet a fundraising goal during the broadcast.</p>
 
                 <h3 id="costs">Costs</h3>
 
@@ -84,7 +84,7 @@
               <div class="col-lg-4" style="text-align: center;">
                 <img class="rounded-circle" src="https://files.gitter.im/whaletank/Lobby/fMKe/2622b6c.jpg" alt="Aldo Antinori" width="160" height="160"/>
                 <h5 id="aldoantinori">Aldo Antinori</h5>
-                <p>"Whale Tank" name and meme</p>
+                <p>"Whales" meme</p>
               </div>
               <div class="col-lg-4" style="text-align: center;">
                 <img class="rounded-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/2/000/0e1/04a/1d65cff.jpg" alt="Randy Hilarski" width="160" height="160"/>
@@ -96,7 +96,7 @@
           <footer>
             <div class="header clearfix">
               <p class="float-right"><a href="#">Back to top</a></p>
-              <p>© 2017 Whale Tank Contributors | CC-BY-4.0</p>
+              <p>© 2017 ICO Whales Contributors | CC-BY-4.0</p>
             </div>
           </footer>
         </div>
